# KCLPlanning-turtlebot

./: README.md
ar_marker_17/: model-1_5.sdf  model.config  model.sdf
ar_marker_17/meshes/: Marker.dae
rosplan_custom_actions/ar_dock_motion_server/: CMakeLists.txt  package.xml
rosplan_custom_actions/ar_dock_motion_server/action/: DockMotion.action
rosplan_custom_actions/ar_dock_motion_server/launch/: ar_dock_motion_client.launch  ar_dock_motion_server.launch
rosplan_custom_actions/ar_dock_motion_server/scripts/: go_to_dock_client.py  go_to_dock_server.py
rosplan_custom_actions/rosplan_interface_docker/: CMakeLists.txt  package.xml
rosplan_custom_actions/rosplan_interface_docker/include/rosplan_interface_docker/: RPDock.h  RPUndock.h
rosplan_custom_actions/rosplan_interface_docker/src/: RPDock.cpp  RPUndock.cpp
rosplan_custom_actions/rosplan_interface_localization/: CMakeLists.txt  package.xml
rosplan_custom_actions/rosplan_interface_localization/include/rosplan_interface_localization/: RPLocalization.h
rosplan_custom_actions/rosplan_interface_localization/src/: RPLocalization.cpp
rosplan_interface_custom_demo/: CMakeLists.txt  package.xml
rosplan_interface_custom_demo/common/: domain_custom.pddl  domain_turtlebot_move.pddl  gen_move_problem.pddl  gen_problem.pddl  plan2.pddl  problem.pddl  problem_custom.pddl  problem_turtlebot2.pddl
rosplan_interface_custom_demo/config/: turtlebot3.rviz  waypoints.yaml
rosplan_interface_custom_demo/launch/: simulated_actions.launch  turtlebot3_auto_park_test.launch  turtlebot3_bringup_sim.launch  turtlebot3_dock_loc_undock.launch  turtlebot3_gt_wp.launch  turtlebot3_test_custom_actions.launch
rosplan_interface_custom_demo/maps/: playground.yaml
rosplan_interface_custom_demo/scripts/: frames.gv  simulated_actions.bash  turtlebot_explore.bash  turtlebot_explore_common.bash
rosplan_interface_custom_demo/worlds/: playground_marker.world
