<?xml version="1.0"?>
<package>
  <name>rosplan_interface_localization</name>
  <version>1.0.0</version>
  <description>
      ROSPlan dispatch interface for the localization library.
      Adapts PDDL actions dispatched from ROSPlan to the localization ROS actions.
  </description>

  <maintainer email="waiyangchan@outlook.com">waiyang</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>rosplan_planning_system</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rosplan_dispatch_msgs</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>rosplan_planning_system</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>

</package>
